➕ patch quantity endpoint
